--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,129 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+	margin: 0;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+	  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+	  sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+  }
+  * {
+	font-family: "Verdana", cursive, sans-serif;
+	color: #ffffff;
+  }
+  
+  body {
+	background-color: #252c4a;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	min-height: 100vh;
+  }
+  
+  .app {
+	background-color: #252d4a;
+	width: 450px;
+	min-height: 200px;
+	height: min-content;
+	border-radius: 15px;
+	padding: 20px;
+	box-shadow: 10px 10px 42px 0px rgba(0, 0, 0, 0.75);
+	display: flex;
+	justify-content: space-evenly;
+	flex-direction: column;
+  }
+  
+  .score-section {
+	display: flex;
+	font-size: 24px;
+	align-items: center;
+  }
+  
+  /* QUESTION/TIMER/LEFT SECTION */
+  .question-section {
+	width: 100%;
+	position: relative;
+	margin-left: 10px;
+  }
+  
+  .question-count {
+	margin-bottom: 20px;
+  }
+  
+  .question-count span {
+	font-size: 28px;
+  }
+  
+  .question-text {
+	margin-bottom: 12px;
+  }
+  
+  .timer-text {
+	background: rgb(230, 153, 12);
+	padding: 15px;
+	margin-top: 20px;
+	margin-right: 20px;
+	border: 5px solid rgb(255, 189, 67);
+	border-radius: 15px;
+	text-align: center;
+  }
+  
+  /* ANSWERS/RIGHT SECTION */
+  .answer-section {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+  }
+  
+.answer-buttons {
+	width: 100%;
+	font-size: 16px;
+	color: #ffffff;
+	background-color: #233150;
+	border-radius: 15px;
+	display: flex;
+	padding: 10px;
+	justify-content: space-between;
+	align-items: center;
+	border: 4px solid #21486a;
+	cursor: pointer;
+	margin: 5px 0;
+  }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  .button-wrap{
+	  display: flex;
+	  justify-content: center;
+	  margin-top: 20px;
+  }
+
+  .next-button{
+	  font-size: 15px;
+	color: #ffffff;
+	background-color: #107eeb;
+	cursor: pointer;
+	border-radius: 35px;
+	padding: 15px 30px;
+	border: navajowhite;
+  }
+  .disable {
+    display: none;
 }
+  .correct {
+	background-color: #2f922f;
+  }
+  
+  .incorrect {
+	background-color: #ff3333;
+  }
+  
+  button:hover {
+	background-color: #555e7d;
+  }
+  
+  button:focus {
+	outline: none;
+  }
+  
+  button svg {
+	margin-right: 5px;
+  }
